--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ version = {attr = "deepgram.__version__"}
 # poetry configuration
 [tool.poetry]
 name = "deepgram"
-version = "3.X.Y" # Please update this to the version you are using
+version = "3.10.0" # Please update this to the version you are using
 description = "The official Python SDK for the Deepgram automated speech recognition platform."
 authors = ["Deepgram DevRel <devrel@deepgram.com>"]
 license = "MIT"
